fix: window errors; scroll not working because of eodash overflow-y hidden on root

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -10,6 +10,11 @@ body {
   position: absolute;
 }
 
+/* fix for eodash setting the body to overflow hidden */
+:root {
+  overflow-y: auto!important;
+}
+
 
 eo-dash a[href="https://eox.at"] img
 {
